open exr render test + fix cam clipping

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
     ],
     "python.analysis.extraPaths": [
         "/home/gillesboisson/sdk/blender_auto_complete_3.4"
-    ]
+    ],
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
+    },
+    "python.formatting.provider": "none"
 }
